WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56208
Crash calling WebContext::clearResourceCaches(InMemoryResourceCachesOnly) before the Web Process has finished launching
https://bugs.webkit.org/show_bug.cgi?id=56208
Summary
Crash calling WebContext::clearResourceCaches(InMemoryResourceCachesOnly) bef...
Jessie Berlin
Reported
2011-03-11 11:07:55 PST
<
rdar://problem/9122161
>
Attachments
Patch
(2.17 KB, patch)
2011-03-11 11:13 PST
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
Patch (Take 2 - with test)
(8.88 KB, patch)
2011-03-11 13:43 PST
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2011-03-11 11:13:38 PST
Created
attachment 85498
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-03-11 11:27:30 PST
Comment on
attachment 85498
[details]
Patch Can you write an API test for this? (I'll bet you can!)
Jessie Berlin
Comment 3
2011-03-11 12:40:53 PST
Comment on
attachment 85498
[details]
Patch I will write an API test and then repost.
Jessie Berlin
Comment 4
2011-03-11 13:43:43 PST
Created
attachment 85521
[details]
Patch (Take 2 - with test)
Adam Roben (:aroben)
Comment 5
2011-03-11 13:55:56 PST
Comment on
attachment 85521
[details]
Patch (Take 2 - with test) Nice!
Jessie Berlin
Comment 6
2011-03-11 14:11:42 PST
Comment on
attachment 85521
[details]
Patch (Take 2 - with test) Committed in
http://trac.webkit.org/changeset/80884
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug