Crash calling WebContext::clearResourceCaches(InMemoryResourceCachesOnly) before the Web Process has finished launching. https://bugs.webkit.org/show_bug.cgi?id=56208

Reviewed by Adam Roben.

Source/WebKit2:

Only send the message if the Web Process is valid.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::clearResourceCaches):

Tools:

* TestWebKitAPI/Tests/WebKit2/SendingMessagesToTheWebProcessBeforeItIsValid.cpp: Added.
(TestWebKitAPI::TEST):
Test that calling WKContextClearResourceCaches works with both options when called before
the Web Process is valid.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
Add the new test.
* TestWebKitAPI/win/TestWebKitAPI.vcproj:
Ditto.



Canonical link: https://commits.webkit.org/70769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80884 268f45cc-cd09-0410-ab3c-d52691b4dbfc